# axiom-apps

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  crates.js  foundry.toml  help.html  index.html  package.json  remappings.txt  rust-toolchain  search-index.js  settings.html  source-files.js
account-age/: Cargo.toml  README.md  foundry.toml  remappings.txt
account-age/circuits/: Cargo.toml
account-age/circuits/configs/: mainnet.json  mainnet_evm.json
account-age/circuits/data/: deployed_verifier.yul  mainnet_0xd20beba9efa30fb34af93af5c91c9a4d6854eac4_6e372e_evm.calldata  task.t.json
account-age/circuits/src/: helpers.rs  lib.rs  tests.rs
account-age/configs/: account_age.json  verify_circuit.config
account-age/contracts/: foundry.toml
account-age/contracts/lib/: YulDeployer.sol
account-age/contracts/src/: AccountAge.sol  AccountAgeV02.sol  IAccountAge.sol
account-age/contracts/test/: AccountAge.t.sol  MockBlockCache.sol
account-age/contracts/test/data/: test.calldata  test_10.calldata
account-age/contracts/yul/: PlonkVerifier.yul  mainnet_10.yul  mainnet_8.yul
account-age/data/account_age/: test.calldata  test.yul
account-age/deploy/: constructor_args.txt  deploy_AccountAge.sh
account-age/src/: AccountAge.sol  lib.rs  tests.rs
account-age/test/: AccountAge.t.sol
account-age/test/data/: input.json
axiom_account_age/: all.html  index.html  sidebar-items.js  struct.AccountAgeCircuit.html  struct.AccountAgeInput.html  struct.AccountAgeInputAssigned.html  struct.AccountAgeInstance.html  struct.AppConfigParams.html
axiom_uniswap_twap/: all.html  index.html  sidebar-items.js  struct.AppConfigParams.html  struct.UniswapTwapCircuit.html  struct.UniswapTwapInput.html  struct.UniswapTwapInputAssigned.html  struct.UniswapTwapInstance.html
blockhash-server/: update_historical.py  update_recent.py  utils.py
data/: mainnet_10_7_f99000_f993ff.calldata
implementors/core/clone/: trait.Clone.js
implementors/core/convert/: trait.Into.js
implementors/snark_verifier_sdk/: trait.CircuitExt.js
lib/utils/: RLPReader.sol  ReadQueryData.sol  UQ112x112.sol
lib/yul/: YulDeployer.sol
proving-server/: README.md  api_query.sh  data  index.js  package.json  query_archive_node.js
randao/: foundry.toml  remappings.txt
randao/deploy/: constructor_args.txt  deploy_Randao.sh
randao/src/: Randao.sol
randao/test/: Randao.t.sol
script/: create_raw_contract.py  start_anvil.sh
src/: Axiom.sol  AxiomDemo.sol
src/axiom_account_age/: lib.rs.html
src/axiom_uniswap_twap/: lib.rs.html
test/: Demo.t.sol
uniswap-twap/: Cargo.toml
uniswap-twap/configs/: uniswap_twap.json  verify_circuit.config
uniswap-twap/contracts/: foundry.toml  remappings.txt
uniswap-twap/contracts/src/: UniswapTwap.sol  UniswapV2Twap.sol
uniswap-twap/contracts/test/: MockAxiom.sol  UniswapTwap.t.sol  UniswapV2Twap.t.sol
uniswap-twap/contracts/test/data/: test.calldata
uniswap-twap/contracts/yul/: mainnet.yul
uniswap-twap/data/uniswap_twap/: test.calldata  test.yul
uniswap-twap/src/: lib.rs  tests.rs
uniswap-v2-twap/: .gitignore  README.md  foundry.toml  remappings.txt
uniswap-v2-twap/cache/: solidity-files-cache.json
uniswap-v2-twap/circuits/: Cargo.toml
uniswap-v2-twap/circuits/configs/: mainnet.json  mainnet_evm.json
uniswap-v2-twap/circuits/data/: mainnet_0xb4e16d0168e52d35cacd2c6185b44281ec28c9dc_98b7f6_fa62d5_evm.calldata  mainnet_0xb4e16d0168e52d35cacd2c6185b44281ec28c9dc_98b7f6_fbe975_evm.calldata  mainnet_evm.yul  task.t.json
uniswap-v2-twap/circuits/src/: helpers.rs  lib.rs  tests.rs
uniswap-v2-twap/contracts/: remappings.txt
uniswap-v2-twap/deploy/: deploy_UniswapV2Twap.sh
uniswap-v2-twap/src/: UniswapV2Twap.sol
uniswap-v2-twap/test/: UniswapV2Twap.t.sol
uniswap-v3-twap/: README.md  foundry.toml
uniswap-v3-twap/deploy/: deploy_UniswapV3Oracle.sh
uniswap-v3-twap/src/: IUniswapV3Oracle.sol  UniswapV3Oracle.sol
uniswap-v3-twap/test/: UniswapV3Oracle.t.sol
yul/: mainnet_10_7.hex
(+41 files in other folders)
