[package]
name = "axiom-account-age"
version = "0.0.1"
edition = "2021"
autobins = false

[dependencies]
itertools = "0.10"
lazy_static = "1.4.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }

# misc
ark-std = { version = "0.3.0", features = ["print-trace"], optional = true }

# axiom
axiom-eth = { git = "https://github.com/axiom-crypto/axiom-eth.git", tag = "v2023_01_30", features = ["halo2-axiom", "aggregation", "evm", "providers"], default-features = false }

# halo2
halo2_proofs_axiom = { git = "https://github.com/axiom-crypto/halo2.git", branch = "axiom/faster-witness-generation", package = "halo2_proofs"}
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib.git", tag = "v0.2.2", features = ["halo2-axiom"], default-features = false }

# crypto
ethers-core = { version = "1.0.2" } # used by halo2-mpt already
rand = "0.8"
rand_chacha = "0.3.1"

# aggregation 
snark-verifier = { git = "https://github.com/axiom-crypto/snark-verifier.git", tag = "v2023_01_30", default-features = false, features = ["loader_halo2", "halo2-axiom"] }
snark-verifier-sdk = { git = "https://github.com/axiom-crypto/snark-verifier.git", tag = "v2023_01_30", default-features = false, features = ["loader_halo2", "halo2-axiom"] }

# generating circuit inputs from blockchain
ethers-providers = { version = "1.0.2" }  