[package]
name = "axiom-uniswap-twap"
version = "0.0.1"
edition = "2021"
autobins = false

[dependencies]
itertools = "0.10"
lazy_static = "1.4.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }

# misc
ark-std = { version = "0.3.0", features = ["print-trace"], optional = true }
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"

# axiom
axiom-eth = { path = "../../axiom-eth", features = ["halo2-axiom", "aggregation", "evm", "providers"], default-features = false }

# halo2
halo2-base = { path = "../../halo2-lib/halo2-base", default-features = false }

# crypto
ethers-core = { version = "1.0.2" } # used by halo2-mpt already
rand = "0.8"
rand_chacha = "0.3.1"

# aggregation 
snark-verifier = { git = "https://github.com/axiom-crypto/snark-verifier.git", branch = "jpw/dev", default-features = false, features = ["loader_halo2"] }
snark-verifier-sdk = { git = "https://github.com/axiom-crypto/snark-verifier.git", branch = "jpw/dev", default-features = false, features = ["loader_halo2"] }

# generating circuit inputs from blockchain
ethers-providers = { version = "1.0.2" }  
